test/fails/bad_geo/compose2.lgl
tag a is vec<2>;
tag b is vec<2>;

void main() {
    a->b a_b = [[1., 1.], [1., 1.]];
    b->vec2 b_v2 = [[1., 1.], [1., 1.]];
    a->a bad = a_b * b_v2; // Illegal downcast
}